src/Test/Fixtures/Good/TypeQualifier/linearScratchInferredQubit.lf
let linear scratch q = qalloc();