src/Test/Fixtures/Bad/TypeQualifier/linearAffineInferredQubit.lf
let linear affine q = qalloc();
